@@ -2,6 +2,7 @@ Version x.xx.x (unreleased)
 
  User-visible changes:
  * Added SVNReposName directive to mod_dav_svn
+ * Insist on a diff that supports "-u"
 
 Version 0.10.2 (released 25 Mar 2002, revision 1587)
 
